fix home on mobile (#20)
* Fix bug where page titles spawned under navbar

* Update to sticky footer

* Prettify sidebar

* Reduce copyright spacing

* Unfix sticky bottom

* update footer on mobile

* updated docs spacing and added our impact on home

* added right color svg icon to header

* updated front page width on mobile

* update home width of mobile

* update mobile site sizing

* change scale in head for mobile

* update text width on top home page

* update mobile home

* update header padding and weight, button colors

* docs sidebar updates

* update header and docs sidebar margins

* header font and spacing, update newsletter wording

* changed home page spacing on mobile

* updated spacing on home page mobile

* fix home on mobile

---------

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -950,12 +950,6 @@ section.content .gatsby-highlight + h4::before{
 //   }
 // }
 
-// @media (min-width: 780px) and (max-width: 1279px) {
-//   .sidebar .sidebar-wrap-inner{
-//       margin-top:50px;
-//   }
-// }
-
 @media (min-width: 600px) {
   .sidebar .sidebar-wrap-inner{
       transform:none !important;
@@ -966,6 +960,7 @@ section.content .gatsby-highlight + h4::before{
 .sidebar .sidebar-wrap-outer{
   padding-top:0;
 }
+
 
 @media (min-width: 600px) {
   .sidebar .sidebar-wrap-outer{
@@ -985,26 +980,6 @@ section.content .gatsby-highlight + h4::before{
       right:0;
       width:20%;
       margin-top:-.3rem;
-  }
-}
-
-@media (min-width: 600px) {
-  .sidebar .sidebar-wrap-outer{
-      padding-bottom: 13vh;
-      position:fixed;
-      z-index: 2;
-      height: 100vh;
-      overflow-y: scroll;
-      -webkit-overflow-scrolling: touch;
-      // margin-right: -900px;
-      padding-right: 1.5rem;
-      background-color: lightgray;
-      color:#003366;
-      opacity: 1 !important;
-      padding-top:1rem;
-      padding-left:1rem;
-      right:0;
-      width:20%;
   }
 }
 
@@ -1205,6 +1180,7 @@ section.content .gatsby-highlight + h4::before{
 
 .sidebar nav li{
   margin-top: 5px;
+  max-width: 90%;
 }
 
 .css-ts0qly{
@@ -1485,10 +1461,12 @@ section.content .gatsby-highlight + h4::before{
   justify-content: space-evenly;
 }
 
+
+
 .box {
   background-color: white;
   color: #003366;
-  min-width: 450px;
+  min-width: 250px;
   max-width: 550px;
   padding-left:1rem;
   padding-right:1rem;
@@ -1538,6 +1516,13 @@ section.content .gatsby-highlight + h4::before{
   padding-right: 6rem;
 }
 
+@media (max-width: 500px) {
+  .grid-container2 {
+    padding-left: 3rem;
+    padding-right:3rem;
+  }
+}
+
 .box2 {
   color: white;
   // min-width: 500px;
@@ -1572,6 +1557,14 @@ section.content .gatsby-highlight + h4::before{
   padding-right:5rem;
   background-color: white;
 }
+
+@media (max-width: 500px) {
+  .grid-container-full  {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
 
 .boxfull {
   background-color: white;
@@ -1615,6 +1608,16 @@ section.content .gatsby-highlight + h4::before{
   margin:auto;
 }
 
+@media (max-width: 500px) {
+  .boxfull2  {
+    padding-left: 0rem;
+    padding-right: 0rem;
+    display: flex;
+  flex-wrap:wrap;
+  }
+}
+
+
 .boxfull2 > h2 {
   text-align: center;
   color: #0073e6;
@@ -1631,6 +1634,15 @@ section.content .gatsby-highlight + h4::before{
   background-color: white;
 }
 
+@media (max-width: 500px){
+  .grid-container-3 {
+      padding-right: 2rem;
+      padding-left: 2rem;
+      justify-content: center;
+      background-color: white;
+    }
+  }
+  
 .box3 {
   background-color: white;
   color: #003366;
@@ -1752,6 +1764,42 @@ section.content .gatsby-highlight + h4::before{
   padding-right: 6rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+// @media (min-width: 780px) and (max-width: 1279px) {
+//   .css-breweries {
+ 
+//   }
+// }
+
+@media (max-width: 500px) {
+  .breweries {
+    padding-left: 2rem;
+    padding-right:2rem;
+    max-width:400px;
+    margin-right:0;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 430px) {
+  .breweries {
+    padding-left: 2rem;
+    padding-right:2rem;
+    max-width:350px;
+    margin-right:0;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 390px) {
+  .breweries {
+    padding-left: 2rem;
+    padding-right:2rem;
+    max-width:325px;
+    margin-right:0;
+    justify-content: center;
+  }
 }
 
 .breweries > ml {
